--- a/example/index.html
+++ b/example/index.html
@@ -41,8 +41,13 @@
         import JanusSDK from '../dist/index.js';
         const client = JanusSDK.createClient({codec: "h264"});
 
-        client.on("user-published", (remoteUserId, remoteTrack) => {
+        client.on("user-published", async (remoteUserId, remoteTrack) => {
             console.log("@user-published", remoteUserId, remoteTrack);
+
+            await client.subscribe(remoteUserId, remoteTrack);
+            const track = remoteTrack.getMediaStreamTrack();
+
+            console.log("subscribed track", track);
         });
 
         document.getElementById("join").addEventListener("click", async () => {
