--- a/example/index.html
+++ b/example/index.html
@@ -100,6 +100,10 @@
             }
         });
 
+        client.on("user-unpublished", async(remoteUserId, remoteTrack) => {
+            remoteTrack.stop();
+        });
+
         document.getElementById("join").addEventListener("click", async () => {
             const config = {
                 server: document.getElementById("cfg-server").value,
