--- a/example/index.html
+++ b/example/index.html
@@ -106,11 +106,11 @@
         });
 
         client.on("connection-state-change", (currState, prevState, reason) => {
-            if (currState === "DISCONNECTED" && reason === "NETWORK_ERROR") {
-                setTimeout(() => {
-                    join();
-                }, 2000);
-            }
+            // if (currState === "DISCONNECTED" && reason === "NETWORK_ERROR") {
+            //     setTimeout(() => {
+            //         join();
+            //     }, 2000);
+            // }
         });
 
         let videoTrack;
