--- a/example/index.html
+++ b/example/index.html
@@ -42,6 +42,16 @@
         <option value="4">user 4</option>
         <option value="5">user 5</option>
         <option value="6">user 6</option>
+        <option value="7">user 7</option>
+        <option value="8">user 8</option>
+        <option value="9">user 9</option>
+        <option value="10">user 10</option>
+        <option value="11">user 11</option>
+        <option value="12">user 12</option>
+        <option value="13">user 13</option>
+        <option value="14">user 14</option>
+        <option value="15">user 15</option>
+        <option value="16">user 16</option>
     </select>
     <button id="join">Join</button>
     |
@@ -73,6 +83,46 @@
     <div class="user">
         <div id="video-6" class="user-video"></div>
         <div class="user-name">user 6</div>
+    </div>
+    <div class="user">
+        <div id="video-7" class="user-video"></div>
+        <div class="user-name">user 7</div>
+    </div>
+    <div class="user">
+        <div id="video-8" class="user-video"></div>
+        <div class="user-name">user 8</div>
+    </div>
+    <div class="user">
+        <div id="video-9" class="user-video"></div>
+        <div class="user-name">user 9</div>
+    </div>
+    <div class="user">
+        <div id="video-10" class="user-video"></div>
+        <div class="user-name">user 10</div>
+    </div>
+    <div class="user">
+        <div id="video-11" class="user-video"></div>
+        <div class="user-name">user 11</div>
+    </div>
+    <div class="user">
+        <div id="video-12" class="user-video"></div>
+        <div class="user-name">user 12</div>
+    </div>
+    <div class="user">
+        <div id="video-13" class="user-video"></div>
+        <div class="user-name">user 13</div>
+    </div>
+    <div class="user">
+        <div id="video-14" class="user-video"></div>
+        <div class="user-name">user 14</div>
+    </div>
+    <div class="user">
+        <div id="video-15" class="user-video"></div>
+        <div class="user-name">user 15</div>
+    </div>
+    <div class="user">
+        <div id="video-16" class="user-video"></div>
+        <div class="user-name">user 16</div>
     </div>
 </div>
 <div id="audios" style="display: none;"></div>
