--- a/example/index.html
+++ b/example/index.html
@@ -42,16 +42,6 @@
         <option value="4">user 4</option>
         <option value="5">user 5</option>
         <option value="6">user 6</option>
-        <option value="7">user 7</option>
-        <option value="8">user 8</option>
-        <option value="9">user 9</option>
-        <option value="10">user 10</option>
-        <option value="11">user 11</option>
-        <option value="12">user 12</option>
-        <option value="13">user 13</option>
-        <option value="14">user 14</option>
-        <option value="15">user 15</option>
-        <option value="16">user 16</option>
     </select>
     <button id="join">Join</button>
     |
@@ -64,6 +54,8 @@
     <button id="muteVideo">Mute Video</button>
     |
     <button id="unmuteVideo">Unmute Video</button>
+    |
+    <button id="switchCamera">Switch Camera</button>
 </div>
 
 <h5>Stats</h5>
@@ -95,46 +87,6 @@
     <div class="user">
         <div id="video-6" class="user-video"></div>
         <div class="user-name">user 6</div>
-    </div>
-    <div class="user">
-        <div id="video-7" class="user-video"></div>
-        <div class="user-name">user 7</div>
-    </div>
-    <div class="user">
-        <div id="video-8" class="user-video"></div>
-        <div class="user-name">user 8</div>
-    </div>
-    <div class="user">
-        <div id="video-9" class="user-video"></div>
-        <div class="user-name">user 9</div>
-    </div>
-    <div class="user">
-        <div id="video-10" class="user-video"></div>
-        <div class="user-name">user 10</div>
-    </div>
-    <div class="user">
-        <div id="video-11" class="user-video"></div>
-        <div class="user-name">user 11</div>
-    </div>
-    <div class="user">
-        <div id="video-12" class="user-video"></div>
-        <div class="user-name">user 12</div>
-    </div>
-    <div class="user">
-        <div id="video-13" class="user-video"></div>
-        <div class="user-name">user 13</div>
-    </div>
-    <div class="user">
-        <div id="video-14" class="user-video"></div>
-        <div class="user-name">user 14</div>
-    </div>
-    <div class="user">
-        <div id="video-15" class="user-video"></div>
-        <div class="user-name">user 15</div>
-    </div>
-    <div class="user">
-        <div id="video-16" class="user-video"></div>
-        <div class="user-name">user 16</div>
     </div>
 </div>
 <div id="audios" style="display: none;"></div>
@@ -257,6 +209,29 @@
 
         document.getElementById("unmuteVideo").addEventListener("click", () => {
             videoTrack.setMuted(false);
+        });
+
+        let cameraFront = true;
+        document.getElementById("switchCamera").addEventListener("click", async () => {
+            const devices = await navigator.mediaDevices.enumerateDevices();
+            const cameras = devices.filter(device => device.kind === "videoinput");
+
+            console.log("cameras", cameras);
+
+            const cameraId = cameraFront ? cameras[cameras.length -1].deviceId : cameras[0].deviceId;
+            cameraFront = !cameraFront;
+
+            const stream = await navigator.mediaDevices.getUserMedia({
+                video: {
+                    width: {ideal: 480},
+                    height: {ideal: 360},
+                    frameRate: 20,
+                    deviceId: cameraId,
+                },
+                audio: false
+            });
+
+            videoTrack.setMediaStreamTrack(stream.getVideoTracks()[0]);
         });
 
         window.addEventListener("offline", () => {
